--- a/seMgmtApp/templates/properties_list.html
+++ b/seMgmtApp/templates/properties_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<section class="col-12">
+<div class="col-12">
     <div class="container">
         <div class="row">
             <div class="input-group my-4">
@@ -74,6 +74,6 @@
             </div>
         </div>
     </div>
-</section>
+</div>
 
 {% endblock %}
