--- a/seMgmtApp/templates/partials/no_results.html
+++ b/seMgmtApp/templates/partials/no_results.html
@@ -2,19 +2,19 @@
     <div class="no-result-text">You haven't added any properties to your list of ads yet.</div>
     <div class="row col-8 col-md-6 col-xl-4 no-result-image-box">
         <img src="{{ url_for('static', filename='img/no-result.jpg') }}" class="img-fluid no-result-img"
-            alt="Property Image" lazyload="on">
+            alt="Property Image">
     </div>
     <div class="container">
         <div class="no-result-buttons-box">
             <div class="col-11 col-md-6 no-result-buttons">
                 <a href={{ url_for( 'properties.add_property') }}>
-                <button type="button" class="btn btn-dark btn-block btn-sm mx-auto" data-toggle="modal"
-                    data-target="#agent_delete_account">Add a Property</button></a>
+                    <button type="button" class="btn btn-dark btn-block btn-sm mx-auto" data-toggle="modal"
+                        data-target="#agent_delete_account">Add a Property</button></a>
             </div>
             <div class="col-11 col-md-6 no-result-buttons">
                 <a href={{ url_for( 'main.index' ) }}>
-                <button type="button" class="btn btn-dark btn-block btn-sm mx-auto" data-toggle="modal"
-                    data-target="#agent_delete_account">Back to home</button></a>
+                    <button type="button" class="btn btn-dark btn-block btn-sm mx-auto" data-toggle="modal"
+                        data-target="#agent_delete_account">Back to home</button></a>
             </div>
         </div>
     </div>
