--- a/semgmtapp/templates/partials/footer.html
+++ b/semgmtapp/templates/partials/footer.html
@@ -6,19 +6,13 @@
     <!-- Social media buttons -->
     <ul class="list-unstyled list-inline text-center social-buttons">
       <li class="list-inline-item">
-        <a class="btn-floating btn-fb mx-1">
-          <i class="fab fa-facebook-f"> </i>
-        </a>
+        <a class="fab fa-facebook fa-lg mx-1" href="https://www.facebook.com/"></a>
       </li>
       <li class="list-inline-item">
-        <a class="btn-floating btn-tw mx-1">
-          <i class="fab fa-twitter"> </i>
-        </a>
+        <a class="fab fa-twitter fa-lg mx-1" href="https://twitter.com/"></a>
       </li>
       <li class="list-inline-item">
-        <a class="btn-floating btn-li mx-1">
-          <i class="fab fa-linkedin-in"> </i>
-        </a>
+        <a class="fab fa-linkedin-in fa-lg mx-1" href="https://www.linkedin.com/in/rodrigoneumann/"></a>
       </li>
     </ul>
 
