--- a/semgmtapp/static/css/style.css
+++ b/semgmtapp/static/css/style.css
@@ -599,6 +599,7 @@ ul {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    margin: auto auto;
     background-color: #FFF;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
