--- a/semgmtapp/templates/edit_property.html
+++ b/semgmtapp/templates/edit_property.html
@@ -32,11 +32,13 @@
             <!-- Address -->
             <div class="form-group">
                 <input type="text" class="form-control" id="address" name="address" value="{{detail.address}}"
-                    placeholder="Address">
+                    placeholder="Address" pattern="[A-Za-z0-9_]{3,}"
+                    title="Only letters and numbers. min lengh 3 characters.">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="address2" name="address2" value="{{detail.address2}}"
-                    placeholder="Apartment, studio or floor number">
+                    placeholder="Apartment, studio or floor number" pattern="[A-Za-z0-9_]{2,}"
+                    title="Only letters and numbers. min lengh 2 characters.">
             </div>
             <!-- District -->
             <div class="input-group mb-3">
@@ -51,12 +53,13 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" id="city" name="city" value="{{detail.city}}"
-                        placeholder="City">
+                        placeholder="City" pattern="[A-Za-z]{3,}" title="Only letters. min lengh 3 characters."
+                        required>
                 </div>
                 <!-- ZIPCODE -->
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" id="zipCode" name="zipCode" value="{{detail.zipCode}}"
-                        placeholder="Zipcode">
+                        placeholder="Postcode" pattern="[A-Za-z0-9_]{6,7}" title="Only UK format Postcode e.g PO3 5LW">
                 </div>
             </div>
             <!-- Description -->
@@ -87,7 +90,8 @@
             <div class="edit-delete-buttons">
                 <button type="submit" class="btn btn-dark btn-block mb-3 mx-2">Update</button>
                 <!-- Cancel Button -->
-                <a class="btn btn-dark btn-block mb-3 mx-2" href={{ url_for( 'properties.property_details', property_id = detail._id) }}>Cancel</a>
+                <a class="btn btn-dark btn-block mb-3 mx-2"
+                    href={{ url_for( 'properties.property_details', property_id = detail._id) }}>Cancel</a>
             </div>
         </form>
     </div>
