carousels index responsivity issue fixed

--- a/semgmtapp/templates/index.html
+++ b/semgmtapp/templates/index.html
@@ -16,13 +16,13 @@
 
     <!-- Banner -->
 
-    <div class="col-12 col-md-11 col-lg-10 col-xl-8 banner"></div>
+    <div class="col-12 col-sm-11 col-lg-10 col-xl-8 banner"></div>
 
     <!-- Carousel -->
     <div class="container col-12 col-md-11 col-lg-10 col-xl-8 p-0">
         <div class="carousel-main">
             <!-- Carousel To buy -->
-            <div class="container col-12 col-md-6 carousel-buy">
+            <div class="container col-12 col-sm-5 col-md-6 carousel-buy">
                 <div class="row title-buy">LATEST FOR SALE</div>
                 <div class="carousel slide" id="main-carousel-buy" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -58,7 +58,7 @@
 
 
             <!-- Carousel To rent -->
-            <div class="container col-12 col-md-6 carousel-rent">
+            <div class="container col-12 col-sm-5 col-md-6 carousel-rent">
                 <div class="row title-rent">LATEST FOR RENT</div>
                 <div class="carousel slide" id="main-carousel-rent" data-ride="carousel">
                     <ol class="carousel-indicators">
