--- a/semgmtapp/static/css/style.css
+++ b/semgmtapp/static/css/style.css
@@ -110,7 +110,7 @@ ul {
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     border-radius: 8px;
-    font-size: 22px;
+    font-size: 18px;
     text-transform: capitalize;
     padding: 0 8px;
     color: rgb(47, 47, 47);
@@ -661,6 +661,18 @@ ul {
         font-size: 30px;
     }
 
+    .carousel-main {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+
+    .carousel-inner,
+    .carousel-item,
+    .carousel-inner .carousel-item .img {
+        height: 40vh;
+    }
+
 }
 
 
@@ -701,21 +713,9 @@ ul {
         border-radius: 10px 10px 0 0;
     }
 
-    .carousel-main {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-    }
-
     .carousel {
         border: 1px solid rgba(0, 0, 0, 0.568);
         border-top: 0
-    }
-
-    .carousel-inner,
-    .carousel-item,
-    .carousel-inner .carousel-item .img {
-        height: 25vh;
     }
 
     .carousel-buy {
@@ -724,6 +724,16 @@ ul {
 
     .carousel-rent {
         padding: 1rem 0 1rem 0;
+    }
+
+    .carousel-inner,
+    .carousel-item,
+    .carousel-inner .carousel-item .img {
+        height: 250px;
+    }
+
+    .title-carousel {
+        font-size: 23px;
     }
 
     .title-profile-box {
