test user added to README, add and edit properties template validation form issues fixed

--- a/semgmtapp/templates/add_property.html
+++ b/semgmtapp/templates/add_property.html
@@ -51,13 +51,13 @@
             <!-- Address -->
             <div class="form-group">
                 <input type="text" class="form-control" id="address" name="address" style="text-transform: capitalize;"
-                    placeholder="Address" pattern="[A-Za-z0-9_]{3,}"
+                    placeholder="Address" pattern="[a-zA-Z0-9\s]{3,}"
                     title="Only letters and numbers. min lengh 3 characters." required>
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="address2" name="address2"
                     style="text-transform: capitalize;" placeholder="Apartment, studio or floor number"
-                    pattern="[A-Za-z0-9_]{2,}" title="Only letters and numbers. min lengh 2 characters.">
+                    pattern="[a-zA-Z0-9\s]{2,}" title="Only letters and numbers. min lengh 2 characters.">
             </div>
             <!-- District -->
             <div class="input-group mb-3">
@@ -72,12 +72,12 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" id="city" name="city" placeholder="City"
-                        pattern="[A-Za-z]{3,}" title="Only letters. min lengh 3 characters." required>
+                        pattern="[a-zA-Z\s]{3,}" title="Only letters. min lengh 3 characters." required>
                 </div>
                 <!-- ZIPCODE -->
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Postcode"
-                        pattern="[A-Za-z0-9_]{6,7}" title="Only UK format Postcode e.g PO3 5LW" required>
+                        pattern="[a-zA-Z0-9\s]{6,7}" title="Only UK format Postcode e.g PO3 5LW" required>
                 </div>
             </div>
             <!-- Description -->
