--- a/semgmtapp/templates/edit_property.html
+++ b/semgmtapp/templates/edit_property.html
@@ -32,12 +32,12 @@
             <!-- Address -->
             <div class="form-group">
                 <input type="text" class="form-control" id="address" name="address" value="{{detail.address}}"
-                    placeholder="Address" pattern="[A-Za-z0-9_]{3,}"
+                    placeholder="Address" pattern="[a-zA-Z0-9\s]{3,}"
                     title="Only letters and numbers. min lengh 3 characters.">
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="address2" name="address2" value="{{detail.address2}}"
-                    placeholder="Apartment, studio or floor number" pattern="[A-Za-z0-9_]{2,}"
+                    placeholder="Apartment, studio or floor number" pattern="[a-zA-Z0-9\s]{2,}"
                     title="Only letters and numbers. min lengh 2 characters.">
             </div>
             <!-- District -->
@@ -53,13 +53,13 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" id="city" name="city" value="{{detail.city}}"
-                        placeholder="City" pattern="[A-Za-z]{3,}" title="Only letters. min lengh 3 characters."
+                        placeholder="City" pattern="[A-Za-z\s]{3,}" title="Only letters. min lengh 3 characters."
                         required>
                 </div>
                 <!-- ZIPCODE -->
                 <div class="form-group col-md-6">
                     <input type="text" class="form-control" id="zipCode" name="zipCode" value="{{detail.zipCode}}"
-                        placeholder="Postcode" pattern="[A-Za-z0-9_]{6,7}" title="Only UK format Postcode e.g PO3 5LW">
+                        placeholder="Postcode" pattern="[a-zA-Z0-9\s]{6,7}" title="Only UK format Postcode e.g PO3 5LW">
                 </div>
             </div>
             <!-- Description -->
